# beat_mario

./: .gitignore  README.md  pyproject.toml
data/goals/: world_1_king.yaml
data/lab/: codex-task-template.yaml  issue-ledger-template.yaml  note-template.yaml  session-template.yaml  variant-proposal-template.yaml
data/routes/scripts/: world_1_1_clear_v0.yaml  world_1_1_draft.yaml  world_1_1_tail_from_stairs.yaml  world_1_1_to_late_pipe.yaml
data/segments/: world_1.yaml
data/worlds/: world_1_locations.yaml
docs/: agent-architecture.md  attempt-lab.md  control-panel-plan.md  fceux-harness.md  goal-contract.md  implementation-plan.md  lab-ui-plan.md  local-assets.md  mario-route-lab.md  product-direction.md  route-status.md  validation-gates.md  world-1-lab-guide.md
scripts/: fceux_1_1_agent.lua  fceux_1_1_runner.lua  fceux_probe.lua  validate_phase0.sh
src/smb3_agent/: __init__.py  __main__.py  cli.py  commands.py  fceux_harness.py  fceux_images.py  goals.py  lab.py  lab_ui.py  observe.py  presets.py  recovery.py  review.py  segments.py
src/smb3_agent/backends/: __init__.py  mednafen.py
src/smb3_agent/control/: __init__.py  input_script.py
src/smb3_agent/detection/: __init__.py  hud_detector.py  state_detector.py
src/smb3_agent/probes/: __init__.py  mednafen_probe.py
src/smb3_agent/tasks/: __init__.py  checkpoint_1_1.py  enter_1_1.py  load_checkpoint_1_1.py  run_1_1_script.py  start_game.py
tests/: test_commands.py  test_fceux_harness.py  test_goals.py  test_lab.py  test_lab_ui.py  test_observe.py  test_recovery.py  test_review.py  test_segments.py
