[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smb3-route-agent"
version = "0.1.0"
description = "Local SMB3 route automation harness"
requires-python = ">=3.11"
dependencies = [
  "mss>=10.2.0",
  "opencv-python>=4.10.0",
  "Pillow>=12.0.0",
  "pyautogui>=0.9.54",
  "pyobjc>=12.2.1",
  "pynput>=1.8.2",
  "PyYAML>=6.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
smb3-agent = "smb3_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
